deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-hello
  template:
    metadata:
      labels:
        app: flask-hello
    spec:
      containers:
      - name: flask-hello
        image: flask-hello:1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
